# NHF2_Sportegyesulet

./: Add.cpp  Add.h  BasketballGroup.cpp  BasketballGroup.h  BasketballTeam.cpp  CMakeLists.txt  Club.cpp  Club.h  FootballTeam.cpp  FootballTeam.h  Group.h  Groups.cpp  Groups.h  HandballGroup.h  HandballTeam.h  List.h  Mainmenu.cpp  Mainmenu.h  Manageteams.h  Menu.cpp  Menu.h  files.cpp  files.h  main.cpp  memtrace.cpp  memtrace.h  string.h  test.cpp  test.h
Data/: BasketballTeam.cpp  BasketballTeam.h  Club.cpp  Club.h  FootballTeam.cpp  FootballTeam.h  HandballTeam.cpp  HandballTeam.h  Team.cpp  Team.h  Teams.cpp  Teams.h  Type.h  string.cpp  string.h
Docs/: Classes.puml  Specifikacio.docx  terv.docx
Docs/Skeleton/: Add.h  BasketballTeam.h  FootballTeam.h  HandballTeam.h  Lists.h  Main.h  Manageteams.h  Team.h  Teamlists.h  Teams.h  files.h  string.h  test.h
Groups/: FootballGroup.cpp  FootballGroup.h  Group.cpp  Group.h  Groups.h  HandballGroup.cpp
Menus/: Add.cpp  Add.h  Create.cpp  Create.h  Grouplists.cpp  Grouplists.h  Groups.cpp  Groups.h  Lists.cpp  Lists.h  Main.cpp  Main.h  Mainmenu.cpp  Mainmenu.h  Manageteams.cpp  Manageteams.h  Menu.h  Teamlists.cpp  Teamlists.h
Teams/: BasketballTeam.h  FootballTeam.cpp  FootballTeam.h  HandballTeam.h  Team.cpp  Team.h  Teams.cpp  Teams.h
